# InterrogateLLM

./: .gitignore  language_models.py  pyproject.toml  requirements.txt  run_experiments.py
models/: movies_model.py
