[tool.poetry]
name = "interrogatellm"
version = "0.1.0"
description = ""
authors = ["Isidora <isidora.tourni@sandboxquantum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sentencepiece = "0.1.99"
setuptools = "68.0.0"
six = "1.16.0"
smart-open = "6.4.0"
spacy = "3.6.1"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
srsly = "2.4.7"
sympy = "1.12"
thinc = "8.1.12"
threadpoolctl = "3.2.0"
tokenizers = "0.13.3"
torch = "2.0.1"
torchvision = "0.15.2"
tqdm = "4.66.1"
transformers = "4.31.0"
triton = "2.0.0"
typer = "0.9.0"
#typing-extensions = "4.7.1"
tzdata = "2023.3"
unidecode = "1.3.6"
urllib3 = "2.0.4"
wasabi = "1.1.2"
werkzeug = "2.3.7"
wheel = "0.38.4"
matplotlib = "^3.9.2"
openai = "^1.43.1"
pandas = "^2.2.2"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
